[package]
name = "rap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hyphenation = { version = "0.8.3", features = ["embed_all"]}
crossterm = "0.27.0"
rodio = "0.17.3"

[lib]
name = "rap_library"
path = "src/lib/mod.rs"
